real time friend req and chat enabled

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ UPSTASH_REDIS_REST_TOKEN=""
 NEXTAUTH_SECRET=''
 GOOGLE_CLIENT_ID=''
 GOOGLE_CLIENT_SECRET=''
+
+app_id = 
+key = 
+secret = 
+cluster = 
